--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -16,12 +16,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Conda
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: build
           auto-activate-base: false
           miniconda-version: "latest"
-          use-mamba: true
+          mamba-version: "*"
 
       - name: Install conda-build and anaconda-client
         shell: bash -l {0}
