--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -36,7 +36,9 @@ jobs:
           conda build recipe --output-folder=output
 
       - name: Upload to Anaconda.org
+        env:
+          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         shell: bash -l {0}
         run: |
-          anaconda login --token ${{ secrets.ANACONDA_API_TOKEN }}
           anaconda upload output/**/owa-env-gst-deps-*.tar.bz2 --user open-world-agents --force
+
