--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,7 +2,7 @@
 {% set gst_version = "1.24.11" %}
 
 package:
-  name: owa-env-gst-deps
+  name: gstreamer-bundle
   version: "{{ version }}"
 
 build:
