--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
 
 build:
   noarch: generic
-  number: 0
+  number: 1
 
 requirements:
   run:
@@ -20,8 +20,8 @@ requirements:
     - gst-plugins-bad =={{ gst_version }}
     - gst-plugins-ugly =={{ gst_version }}
     # Additional dependencies needed to be fixed to prevent error
-    - graphite2=1.3.14=he0c23c2_0  # [win64]
-    - gettext=0.21.1=h5728263_0 # [win64]
+    - gettext=0.21.1
+    # - graphite2=1.3.14=he0c23c2_0  # Issue which graphite2 is calling ucrtbased.dll, which is debug dll, seems to be resolved as 2025-10-21
 
 about:
   home: https://github.com/open-world-agents/open-world-agents
