--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,18 +7,18 @@ package:
 
 build:
   noarch: generic
-  number: 2
+  number: 0
 
 requirements:
   run:
-    - pygobject ==3.54.5
-    - gst-python =={{ gst_version }}
-    - gst-libav =={{ gst_version }}
-    - gstreamer =={{ gst_version }}
-    - gst-plugins-base =={{ gst_version }}
-    - gst-plugins-good =={{ gst_version }}
-    - gst-plugins-bad =={{ gst_version }}
-    # - gst-plugins-ugly =={{ gst_version }} # no needed for ocap and has dependency conflict
+    - pygobject =3.54.5
+    - gst-python ={{ gst_version }}
+    - gst-libav ={{ gst_version }}
+    - gstreamer ={{ gst_version }}
+    - gst-plugins-base ={{ gst_version }}
+    - gst-plugins-good ={{ gst_version }}
+    - gst-plugins-bad ={{ gst_version }}
+    # - gst-plugins-ugly ={{ gst_version }} # no needed for ocap and has dependency conflict
     # Additional dependencies needed to be fixed to prevent error
     # - gettext=0.21.1 # maybe no matter..
     # - graphite2=1.3.14=he0c23c2_0  # Issue which graphite2 is calling ucrtbased.dll, which is debug dll, seems to be resolved as 2025-10-21
