--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -29,6 +29,7 @@ jobs:
         shell: bash -l {0}
         run: |
           mamba install -y conda-build anaconda-client
+          mamba install -y python=3.11
 
       - name: Build package
         shell: bash -l {0}
