--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -6,6 +6,10 @@ on:
     paths:
       - 'recipe/**'
       - '.github/workflows/conda-publish.yml'
+  pull_request:
+    paths:
+      - 'recipe/**'
+      - '.github/workflows/conda-publish.yml'
 
 jobs:
   build-upload:
@@ -36,6 +40,8 @@ jobs:
           conda build recipe --output-folder=output
 
       - name: Upload to Anaconda.org
+        # Only upload when pushing to main branch
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         shell: bash -l {0}
